[project]
name = "tester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.9.0",
    "fastapi>=0.120.0",
    "mypy>=1.18.2",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.38.0",
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true